--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "contentlayer build && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate && contentlayer build"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
@@ -49,14 +49,12 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "contentlayer": "^0.3.4",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.441.0",
     "nanoid": "^5.1.6",
     "next": "^14.2.13",
     "next-auth": "^5.0.0-beta.20",
-    "next-contentlayer": "^0.3.4",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
