--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,10 @@
   "parserOptions": {
     "project": true
   },
-  "plugins": ["@typescript-eslint", "tailwindcss"],
+  "plugins": ["@typescript-eslint"],
   "extends": [
     "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended-type-checked",
-    "plugin:tailwindcss/recommended",
     "prettier"
   ],
   "rules": {
@@ -28,11 +27,6 @@
   "settings": {
     "next": {
       "rootDir": ["./"]
-    },
-    "tailwindcss": {
-      "callees": ["cn", "cva"],
-      "config": "./tailwind.config.ts",
-      "classRegex": "^(class(Name)?|tw)$"
     }
   }
 }
