--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,7 @@
   "plugins": ["@typescript-eslint"],
   "extends": [
     "next/core-web-vitals",
-    "plugin:@typescript-eslint/recommended-type-checked",
-    "prettier"
+    "plugin:@typescript-eslint/recommended-type-checked"
   ],
   "rules": {
     "@typescript-eslint/consistent-type-imports": [
