--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "^0.0.23",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@t3-oss/env-nextjs": "^0.11.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/uuid": "^10.0.0",
