feat: Add registration system and deployment documentation
- Added complete signup page with Arabic UI
- Fixed email verification (auto-verify on signup)
- Added comprehensive deployment guides (DEPLOYMENT.md, VERCEL_SETUP.md)
- Added registration documentation (SIGNUP_GUIDE.md, REGISTRATION_INFO.md)
- Updated .env.example with detailed instructions
- Updated .gitignore to exclude sensitive files
- Improved auth.ts with auto email verification

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,66 @@
-# APP
-NODE_ENV="development"
-NEXT_PUBLIC_APP_URL="https://localhost:3000"
+# ============================================
+# RIAL MIND - Environment Variables Template
+# ============================================
+# Copy this file to .env.local for development
+# Add these variables to Vercel for production
+# ============================================
 
-# AUTHENTICATION (@ NEXT-AUTH)
-# Secret can be generated with `openssl rand -base64 32`
-# Follow instructions at https://codevoweb.com/nextjs-add-google-and-github-oauth2-using-nextauth-js/ to obtain client ids and secrets
+# ==================== APP ====================
+NODE_ENV="development"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+NEXTAUTH_URL="http://localhost:3000"
+
+# For production (Vercel):
+# NEXT_PUBLIC_APP_URL="https://your-app.vercel.app"
+# NEXTAUTH_URL="https://your-app.vercel.app"
+
+
+# ================ AUTHENTICATION =================
+# Generate with: openssl rand -base64 32
+# Or on Windows PowerShell: [Convert]::ToBase64String([System.Security.Cryptography.RandomNumberGenerator]::GetBytes(32))
 AUTH_SECRET=""
 JWT_SECRET_KEY=""
 
+
+# ================ GOOGLE OAUTH =================
+# Get from: https://console.cloud.google.com
+# 1. Create a new project
+# 2. Enable Google+ API
+# 3. Create OAuth 2.0 credentials
+# 4. Add authorized redirect URIs:
+#    - http://localhost:3000/api/auth/callback/google (development)
+#    - https://your-app.vercel.app/api/auth/callback/google (production)
 GOOGLE_ID=""
 GOOGLE_SECRET=""
-GITHUB_ID=""
-GITHUB_SECRET=""
 
-# DATABASE (POSTGRES @ NEON)
-# Ensure you append `sslmode=required` after the question mark in your connection string
+
+# ============ DATABASE (NEON POSTGRES) ===========
+# Get from: https://console.neon.tech
+# 1. Create a new project
+# 2. Copy the connection strings from Dashboard
+# 3. Ensure both have ?sslmode=require
 DATABASE_URL=""
+DIRECT_URL=""
 
-# EMAIL (@ RESEND)
+# Example format:
+# DATABASE_URL="postgresql://user:pass@host/db?sslmode=require&pgbouncer=true&connect_timeout=15"
+# DIRECT_URL="postgresql://user:pass@host/db?sslmode=require&connect_timeout=15"
+
+
+# ================ EMAIL (RESEND) =================
+# Get from: https://resend.com
+# Optional - for email verification and notifications
 RESEND_API_KEY=""
 RESEND_EMAIL_FROM=""
 RESEND_EMAIL_TO=""
 RESEND_HOST="smtp.resend.com"
 RESEND_USERNAME="resend"
 RESEND_PORT="465"
+
+
+# ============================================
+# NOTES:
+# - Never commit .env or .env.local to git
+# - Use different secrets for development and production
+# - Update Google OAuth URLs after deploying to Vercel
+# ============================================
